--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,9 @@ gpt_fn_macros = { path = "./fn_macros", version = "1.0.0", optional = true }
 schemars = { version = "0.8.13", optional = true }
 async-trait = { version = "0.1.73", optional = true }
 async-recursion = { version = "1.0.5", optional = true }
+anyhow = "1.0"
+tiktoken-rs = {version = "0.5.0",features = ["async-openai"]}
+log = "0.4.14"
 
 [dev-dependencies]
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
